<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/show_additional_fields" />
    
    <EditText 
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/Name" />
    
    <EditText 
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="phone"
        android:hint="@string/Tel" />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textEmailAddress"
        android:hint="@string/Email" />
    
     <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textPostalAddress"
        android:hint="@string/Address" />   

     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:columnCount="3"
         android:rowCount="1" >

         <Button
             android:id="@+id/save"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
             android:text="@string/Save" />
         
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content"
	        android:layout_row="0"
            android:layout_column="1" />
	    
	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
	        android:text="@string/Cancel" />
	    
	    </GridLayout>
    
</LinearLayout>
