<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/job"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:hint="@string/job"
	    android:inputType="text" />
        
    <EditText 
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/Company" />

    <EditText
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/Website"
        android:inputType="textWebEditText" />

    <EditText 
        android:id="@+id/im"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:hint="@string/IM" />                
    
</LinearLayout>
